--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,9 @@
-- name: Page Name
-  link: /page-1/
-- name: Blog
-  link: /blog/
+- name: Project
+  link: /project/
+- name: Problemset
+  link: /Problemset/
   dropdown: 
-    - name: Page 2
-      link: /page-2/
+    - name: 백준
+      link: /BOJ/
+    - name: 정보올림피아드
+      link: /KOI/
